fix no gap on larger sizes

--- a/src/buttons/styles.scss
+++ b/src/buttons/styles.scss
@@ -6,9 +6,9 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   margin-right: -$container_horizontalMargin;
-  padding-right: $container_horizontalMargin;
 
   > * {
+    margin-right: $container_horizontalMargin;
     margin-bottom: $container_verticalMargin;
   }
 }
